OH-18 use new location fields
