# app/Http/Requests/Doctor/Register.php
@@ -35,11 +35,13 @@ class Register extends FormRequest
             'description' => 'required|string|max:3000',
             'region_id' => 'required|exists:regions,id',
             'password' => 'required|string|min:6|max:255|confirmed',
-            'marker_name' => 'nullable|string|max:60',
-            'marker_address' => 'required|string|max:80',
-            'marker_lat' => 'nullable|numeric',
-            'marker_lng' => 'nullable|numeric',
-            'marker_type' => 'nullable|string|max:30',
+            'address' => 'required|string|max:255',
+            'city' => 'required|string|max:255',
+            'state' => 'required|string|max:255',
+            'country' => 'required|string|max:255',
+            'postal_code' => 'required|max:255',
+            'latitude' => 'required|numeric',
+            'longitude' => 'required|numeric',
             'language_ids' => 'required|array',
             'language_ids.*' => 'distinct|exists:languages,id',
             'recaptcha' => ['required', 'string', new Recaptcha('register_doctor')],
